Add a live file browser, search, and an LLM cleanup analyzer
- Browse the whole PC Explorer-style: address bar, drive picker, and
  lazy folder loading (Scanner.shallow / listChildren, zero-dep). Folders
  load children from disk on expand; right-click any folder to scan it.
- Search / filter the scanned tree by name, extension (.mp4), or type
  (type:video); results shown flat, largest-first, in both views.
- Cleanup analyzer: the local model ranks the biggest files keep-vs-junk
  with reasons + advice. Every suggested deletion stays approval-gated,
  and a safety guard drops system / .git paths the model shouldn't touch.
- Self-checks for the browse helpers, the safety guard, and the query
  parser; new headless hooks (-Ddiskbloom.browse/.search/.analyze).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>